--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
     </dependency>
+<!-- https://mvnrepository.com/artifact/com.ib/interactive-brokers-api -->
+<dependency>
+    <groupId>com.interactivebrokers</groupId>
+    <artifactId>tws-api</artifactId>
+    <version>9.73.01</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+    
+<!-- 	<scope>test</scope> -->
+</dependency>
+    
 	</dependencies>
 
 	<build>
